# mangadex-downloader

./: .coveragerc  .env  .gitignore  README.md  pyproject.toml  requirements-dev.txt
.github/workflows/: python-package.yml
src/mangadex_downloader/: api_access_service.py  data_processing_service.py  file_access_services.py  main.py  user_interface_service.py
src/mangadex_downloader/services/: api_access_service.py  data_processing_service.py  file_access_service.py  session_manager.py  user_interface_service.py
tests/: mock_data.py
tests/unit/: test_api_access_services.py  test_data_processing_service.py  test_file_access_service.py
